Fixed TODO on ProcessCsvPaymentsOutputFileReactiveService